no longer need to use css for resizer ui visibility

--- a/src/gwt/panmirror/src/editor/src/nodes/image/image-styles.css
+++ b/src/gwt/panmirror/src/editor/src/nodes/image/image-styles.css
@@ -13,16 +13,8 @@
  *
  */
 
-.ProseMirror .pm-image-resize-ui {
-  display: none;
-}
-
 .ProseMirror .pm-image-resize-handle {
   border: 1px solid black;
-}
-
-.ProseMirror .ProseMirror-selectednode .pm-image-resize-ui {
-  display: unset;
 }
 
 
